...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favories_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout1"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout2"
        android:src="@drawable/star"
        app:backgroundTint="#fff">
...
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline1">

        <ImageButton
            android:id="@+id/return_mainActivity_btn"
            android:layout_width="42dp"
            android:layout_height="34dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/bouton_de_retour"
...
